k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: planet
  labels:
    app.kubernetes.io/part-of: planet-io
